--- a/themes/blue/res/values-watch-v8/colors.xml
+++ b/themes/blue/res/values-watch-v8/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="accent_device_default_dark">#ff5e97f6</color>
-    <color name="background_device_default_dark">#ff000000</color>
-    <color name="background_floating_device_default_dark">#ff1d2e4d</color>
-    <color name="primary_device_default_dark">#ff808080</color>
-    <color name="primary_dark_device_default_dark">#ff333333</color>
+    <color name="accent_device_default_dark">#5e97f6</color>
+    <color name="background_device_default_dark">#000000</color>
+    <color name="background_floating_device_default_dark">#1d2e4d</color>
+    <color name="primary_device_default_dark">#808080</color>
+    <color name="primary_dark_device_default_dark">#333333</color>
 </resources>
