--- a/themes/red/res/values-watch-v8/colors.xml
+++ b/themes/red/res/values-watch-v8/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="accent_device_default_dark">#ffff5252</color>
-    <color name="background_device_default_dark">#ff000000</color>
-    <color name="background_floating_device_default_dark">#ffb71c1c</color>
-    <color name="primary_device_default_dark">#ff808080</color>
-    <color name="primary_dark_device_default_dark">#ff333333</color>
+    <color name="accent_device_default_dark">#F4493C</color>
+    <color name="background_device_default_dark">#000000</color>
+    <color name="background_floating_device_default_dark">#701F19</color>
+    <color name="primary_device_default_dark">#808080</color>
+    <color name="primary_dark_device_default_dark">#333333</color>
 </resources>
